--- a/src/sections/NavSections/Navbar.astro
+++ b/src/sections/NavSections/Navbar.astro
@@ -5,9 +5,9 @@ const A_StyleResponsive = "hover:underline hover:scale-110 transition text-white
 ---
 
 <nav class="bg-primary p-4 flex  items-center justify-between w-full  ">
-  <h1 class=" text-xl font-black  hover:scale-105 transition"><a href="">Gimnasio Astreus</a></h1>
+  <h1 class=" text-xl font-black  hover:scale-105 transition"><a href="/">Gimnasio Astreus</a></h1>
   <div class=" hidden lg:w-1/5 lg:flex lg:justify-between lg:items-center   ">
-    <a class={A_Style} href="">Home</a>
+    <a class={A_Style} href="/">Home</a>
     <a class={A_Style} href="">About</a>
     <a class={A_Style}href="" >Planes</a>
    <button class="bg-white p-2 hover:shadow-2xl hover:scale-110 transition text-lg italic font-black rounded"><a href="">Unete Ahora</a></button> 
