--- a/src/sections/OurGymSections/ubicacion.astro
+++ b/src/sections/OurGymSections/ubicacion.astro
@@ -1,6 +1,6 @@
 <section class="flex flex-col items-center justify-center h-auto   lg:justify-center lg:max-w-5xl lg:mx-auto max-w-80 mx-auto">
   
-  <div class="grid grid-cols-1 lg:grid-cols-2 justify-center my-6 tracking-wider gap-6 items-center lg:gap-9">
+  <div class="grid grid-cols-1  justify-center my-6 tracking-wider gap-6 items-center lg:gap-9">
     <div class="text-center flex flex-col gap-5">
         <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4  lg:mb-2 ">
             NUESTRA UBICACIÓN
