--- a/src/sections/SectionsIndex/price.astro
+++ b/src/sections/SectionsIndex/price.astro
@@ -1,5 +1,5 @@
 ---
-const Article = "hover:scale-105 transition border-solid hover:border-2 p-5   mx-7 lg:mx-0 rounded-md lg:h-auto flex flex-col justify-center";
+const Article = "hover:scale-105 transition shadow-white shadow-sm hover:shadow hover:shadow-primary p-5   mx-7 lg:mx-0 rounded-md lg:h-auto flex flex-col justify-center";
 const H2=" text-primary text-center text-2xl lg:text-3xl font-bold ";
 const Ul ="text-white lg:px-7 lg:my-9 my-5 tracking-wider lg:text-base";
 const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
