--- a/src/sections/OurGymSections/ubicacion.astro
+++ b/src/sections/OurGymSections/ubicacion.astro
@@ -1,22 +1,28 @@
 <section class="flex flex-col items-center justify-center h-auto   lg:justify-center lg:max-w-5xl lg:mx-auto max-w-80 mx-auto">
-  
-  <div class="grid grid-cols-1  justify-center my-6 tracking-wider gap-6 items-center lg:gap-9">
-    <div class="text-center flex flex-col gap-5">
-        <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4  lg:mb-2 ">
-            NUESTRA UBICACIÓN
-          </h1>
-      <p class="text-white text-lg ">
-        "Nuestra gimnasio se encuentra en una ubicación conveniente y accesible.
-        ¡Ven a visitarnos y descubre un espacio dedicado a tu bienestar! Para
-        encontrar fácilmente nuestra ubicación en el mapa."
+  <div class="text-center">
+    <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4  lg:mb-2 ">
+      NUESTRA UBICACIÓN
+    </h1>
+   </div>
+
+  <div class="grid  grid-cols-1 lg:grid-cols-2  justify-center my-6 tracking-wider gap-6 items-center lg:gap-9">
+         <div class="h-auto  ">
+          <img  class="w-full object-cover aspect-video"  src="https://developers.google.com/static/maps/images/landing/hero_maps_static_api.png" alt="" />
+        </div>
+
+     <div class="text-center flex flex-col gap-5 lg:mx-16 py-14  bg-primary rounded-md hover:scale-105 transition saturate-50 hover:saturate-100">
+      <h4 class="text-3xl font-black italic">Dirección</h4>
+      <p class=" text-lg ">
+        Calle Cervantes, 34, Madrid, CP 28001
       </p>
-      <a class="text-yellow-100 italic underline hover:scale-110 transition text-lg font-black lg:text-xl hover:text-primary" target="_blank" href="https://maps.app.goo.gl/YoRqyrXoBtebkaGA7"
+      <a class="text-stone-900 italic underline hover:scale-110 transition text-lg font-black lg:text-xl hover:text-black" target="_blank" href="https://maps.app.goo.gl/YoRqyrXoBtebkaGA7"
         >Link Ubicacion</a
       >
     </div>
-     <div class="h-auto ">
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
-     </div>
+
   </div>
+
+
+ 
 </section>
 
