--- a/src/sections/OurGymSections/ubicacion.astro
+++ b/src/sections/OurGymSections/ubicacion.astro
@@ -1,23 +1,23 @@
 <section class="flex flex-col items-center justify-center h-auto   lg:justify-center lg:max-w-5xl lg:mx-auto max-w-80 mx-auto">
   <div class="text-center">
-    <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4  lg:mb-2 ">
+    <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4 mt-14 lg:mt-0  lg:mb-2 ">
       NUESTRA UBICACIÓN
     </h1>
    </div>
 
   <div class="grid  grid-cols-1 lg:grid-cols-2  justify-center my-6 tracking-wider gap-6 items-center lg:gap-9">
-         <div class="h-auto  ">
-          <img  class="w-full object-cover aspect-video"  src="https://developers.google.com/static/maps/images/landing/hero_maps_static_api.png" alt="" />
-        </div>
 
-     <div class="text-center flex flex-col gap-5 lg:mx-16 py-14  bg-primary rounded-md hover:scale-105 transition saturate-50 hover:saturate-100">
-      <h4 class="text-3xl font-black italic">Dirección</h4>
-      <p class=" text-lg ">
+     <div class="text-center flex flex-col gap-5 lg:mx-16 mx-11  p-5 lg:py-14  bg-primary rounded-md hover:scale-105 transition saturate-50 hover:saturate-100">
+      <h4 class=" text-2xl lg:text-3xl  font-black italic">Dirección</h4>
+      <p class=" lg:text-lg  text-base">
         Calle Cervantes, 34, Madrid, CP 28001
       </p>
-      <a class="text-stone-900 italic underline hover:scale-110 transition text-lg font-black lg:text-xl hover:text-black" target="_blank" href="https://maps.app.goo.gl/YoRqyrXoBtebkaGA7"
+      <a class="text-stone-900 italic underline hover:scale-110 transition text-lg font-black lg:text-lg hover:text-black" target="_blank" href="https://maps.app.goo.gl/YoRqyrXoBtebkaGA7"
         >Link Ubicacion</a
       >
+    </div>
+    <div class="h-auto  ">
+      <img  class="w-full object-cover aspect-video"  src="https://developers.google.com/static/maps/images/landing/hero_maps_static_api.png" alt="" />
     </div>
 
   </div>
