--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -11,7 +11,7 @@ import SliderGym from '../sections/OurGymSections/sliderGym.astro'
 <Layout title="otro">
 	<Navbar />
 	<InfoMain />
-	<main class="lg:max-w-5xl lg:mx-auto max-w-80 mx-auto" >
+	<main  >
 		<SliderGym />
 	</main>
  
