--- a/src/sections/SectionsIndex/info.astro
+++ b/src/sections/SectionsIndex/info.astro
@@ -1,15 +1,15 @@
-<section class="grid grid-cols-1 md:grid-cols-2  md:h-screen h-midScreem">
+<section class="grid grid-cols-1 md:grid-cols-2  md:h-screen h-auto my-5 lg:my-0">
 
-  <article class=" flex flex-col  max-w-80  mx-auto justify-center items-center text-center    md:max-w-md   md:items-start md:ml-52    ">
+  <article class=" flex flex-col  lg:my-0   mx-auto justify-center items-center text-center    md:max-w-md   md:items-start md:ml-52    ">
     <h1 class="uppercase text-primary  font-black italic text-4xl text-center md:text-start  md:text-6xl">Sobre nuestra familia deportista</h1>
-    <p class="text-white text-center   tracking-wider text-lg my-6  md:text-start   md:text-xl  md:my-8  ">
+    <p class="text-white  mx-4   text-lg my-6  md:text-start   md:text-xl  md:my-8  ">
       Astrás lo fundó en 2001 un matrimonio, Rubén y Adoración. Desde entonces,
       nos hemos expandido hasta más de 115 lugares en todo el país.
     </p>
-    <a class="text-white font-black tracking-widest underline hover:scale-105 transition hover:underline  hover:text-primary"  href="">Más información</a>
+    <a class="text-white font-black tracking-widest mb-8 lg:mb-0 underline hover:scale-105 transition hover:underline  hover:text-primary"  href="">Más información</a>
   </article>
 
-  <article class=" hidden   md:flex  flex-row justify-center items-center md:px-9 gap-3 md:gap-7">
+  <article class="flex  flex-row justify-center items-center md:px-9 gap-3 md:gap-7">
     <div class="h-full w-36 mb-5  md:h-3/5    md:w-60  md:mb-24">
         <img class="w-full h-full object-cover  saturate-50  hover:saturate-100 hover:scale-105 transition  hover:shadow-2xl " src="https://i.postimg.cc/G2yTJtwV/img-Second.webp" alt="">
     </div>
