--- a/src/sections/OurGymSections/sliderGym.astro
+++ b/src/sections/OurGymSections/sliderGym.astro
@@ -1,28 +1,28 @@
 ---
-const silder = "w-full left-0 sticky object-cover rounded-md snap-center";
-const DivImg="h-80 flex";
+const silder = "w-full object-cover rounded-md ";
+const DivImg=" h-32  lg:h-80 flex";
 ---
-<section class=" h-auto flex flex-col items-center">
+<section class=" h-auto flex flex-col items-center my-4">
 <h1 class="text-primary font-black text-4xl lg:text-5xl my-4">INSTALACIONES</h1>
-<p class="text-white mb-7 text-lg text-center">"Ofrecemos instalaciones de primera clase para nuestros socios. Desde un gimnasio equipado hasta áreas de relajación."</p>
- <article class="grid grid-cols-1 lg:grid-cols-3 gap-4 ">
+<p class="text-white mb-7 text-lg  text-center mx-4 lg:mx-0">"Ofrecemos instalaciones de primera clase para nuestros socios. Desde un gimnasio equipado hasta áreas de relajación."</p>
+ <article class="grid grid-cols-2 lg:grid-cols-3 gap-4 mx-6 lg:mx-0 ">
     <div class={DivImg}>
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+        <img  class="w-full object-cover aspect-video"  src="https://etenonfitness.com/wp-content/uploads/2023/05/cabecera-diseno-integral-gimnasio_s.jpg" alt="" />
      </div>
      <div class={DivImg}>
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+        <img  class="w-full object-cover aspect-video"  src="https://i.blogs.es/410bab/danielle-cerullo-cqfnt66ttzm-unsplash/1366_2000.jpeg" alt="" />
      </div>
      <div class={DivImg}>
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+        <img  class="w-full object-cover aspect-video"  src="https://www.descifrado.com/wp-content/uploads/2021/01/1586970559_336126_1586972774_noticia_normal.jpg" alt="" />
      </div>
      <div class={DivImg}>
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+        <img  class="w-full object-cover  aspect-video"  src="https://www.blkboxfitness.com/cdn/shop/articles/Club_Design.png?v=1593591281" alt="" />
      </div>
      <div class={DivImg}>
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+        <img  class="w-full object-cover aspect-video"  src="https://www.equipamientointegraldeoficinas.com/wp-content/uploads/reformas-de-gimnasios.jpg" alt="" />
      </div>
      <div class={DivImg}>
-        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+        <img  class="w-full object-cover aspect-video"  src="https://ibero.mx/sites/default/files/prensaymultimedios/gym-3-7.jpeg" alt="" />
      </div>
    
  </article>
