--- a/src/sections/SectionsIndex/infoBenefits.astro
+++ b/src/sections/SectionsIndex/infoBenefits.astro
@@ -11,7 +11,7 @@ const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
      <a href="/About"> <h1 class={H1_style}>Nuestro gimnasio</h1></a>
     </div>
     <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/g2h9pPpd/second-IMG6.png');">
-     <a href=""><h1  class={H1_style} >Explora nuestras clases en grupo</h1></a> 
+     <a href="/class"><h1  class={H1_style} >Explora nuestras clases en grupo</h1></a> 
     </div>
     <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/yNCMYr6R/second-IMG7.png');">
      <a href=""><h1  class={H1_style}>entrenamientos personales</h1></a> 
