--- a/src/sections/Clases/yoga.astro
+++ b/src/sections/Clases/yoga.astro
@@ -4,7 +4,7 @@ const Horario = "text-white text-sm lg:text-base"
 
 
 <section class="h-auto flex flex-col justify-center items-center">
-    <h1 class="text-4xl lg:text-5xl font-black mt-8 text-primary italic">Clases Grupo</h1>
+    <h1 class="text-4xl lg:text-5xl font-black mt-8 text-primary italic">CLASES EN GRUPO</h1>
     <article class="grid  grid-cols-1 lg:grid-cols-2 gap-9   mx-7 my-9">
         <div class="grid grid-cols-2 gap-2 lg:gap-0  rounded-md hover:scale-105 transition shadow-white   shadow-sm hover:shadow hover:shadow-primary p-5">
             <div class="bg-white lg:h-56">
@@ -17,7 +17,7 @@ const Horario = "text-white text-sm lg:text-base"
                     <p class={Horario}>8am-9am  / 18:00 -19:00</p>
                     <p class={Horario}>Duracion : 1 hora</p>
 
-                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Pedir</a></button>
+                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Iniciar ahora</a></button>
                  </div>
         </div>
         <div class="grid grid-cols-2 gap-2 lg:gap-0  rounded-md hover:scale-105 transition shadow-white   shadow-sm hover:shadow hover:shadow-primary p-5">
@@ -25,13 +25,13 @@ const Horario = "text-white text-sm lg:text-base"
                  <img class="object-cover w-full h-full" src="https://media.foodspring.com/magazine/public/uploads/2020/04/Spinning-1195x759.gif" alt=""> 
             </div>
                 <div class="flex  flex-col items-center text-center justify-center  lg:justify-around">
-                    <h4 class="text-primary font-black text-center text-xl lg:text-2xl">Clases de Yoga</h4>
+                    <h4 class="text-primary font-black text-center text-xl lg:text-2xl">Clases de Spinning</h4>
                     <h5 class="text-center font-bold text-primary text-base  ">Horario:</h5>
-                    <p class={Horario}>L-M-S</p>
-                    <p class={Horario}>8am-9am  / 18:00 -19:00</p>
+                    <p class={Horario}>M-J</p>
+                    <p class={Horario}>9am-10am  / 19:30 -20:30</p>
                     <p class={Horario}>Duracion : 1 hora</p>
 
-                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Pedir</a></button>
+                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Iniciar ahora</a></button>
                  </div>
         </div>
         <div class="grid grid-cols-2 gap-2 lg:gap-0  rounded-md hover:scale-105 transition shadow-white   shadow-sm hover:shadow hover:shadow-primary p-5">
@@ -39,27 +39,27 @@ const Horario = "text-white text-sm lg:text-base"
                  <img class="object-cover w-full h-full" src="https://i.blogs.es/74be3c/istock-891602094/1366_2000.jpeg" alt=""> 
             </div>
                 <div class="flex  flex-col items-center text-center justify-center  lg:justify-around">
-                    <h4 class="text-primary font-black text-center text-xl lg:text-2xl">Clases de Yoga</h4>
+                    <h4 class="text-primary font-black text-center text-xl lg:text-2xl">Entrenamiento de Fuerza</h4>
                     <h5 class="text-center font-bold text-primary text-base  ">Horario:</h5>
-                    <p class={Horario}>L-M-S</p>
-                    <p class={Horario}>8am-9am  / 18:00 -19:00</p>
+                    <p class={Horario}>L-M-V / S-D</p>
+                    <p class={Horario}>11:30am-12:30pm  / 17:30 -18:30</p>
                     <p class={Horario}>Duracion : 1 hora</p>
 
-                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Pedir</a></button>
+                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Iniciar ahora</a></button>
                  </div>
         </div>
         <div class="grid grid-cols-2 gap-2 lg:gap-0  rounded-md hover:scale-105 transition shadow-white   shadow-sm hover:shadow hover:shadow-primary p-5">
             <div class="bg-white lg:h-56">
-                 <img class="object-cover w-full h-full" src="https://i0.wp.com/blog.smartfit.com.mx/wp-content/uploads/2023/08/como-entrenar-en-el-gym-por-un-dia-clase-de-yoga-1.jpg?fit=1200%2C675&ssl=1" alt=""> 
+                 <img class="object-cover w-full h-full" src="https://fitathletic.com/wp-content/uploads/2014/07/fit_athletic_blog_reformer-pilates-1.jpg" alt=""> 
             </div>
                 <div class="flex  flex-col items-center text-center justify-center  lg:justify-around">
-                    <h4 class="text-primary font-black text-center text-xl lg:text-2xl">Clases de Yoga</h4>
+                    <h4 class="text-primary font-black text-center text-xl lg:text-2xl">Clases de Pilates</h4>
                     <h5 class="text-center font-bold text-primary text-base  ">Horario:</h5>
-                    <p class={Horario}>L-M-S</p>
-                    <p class={Horario}>8am-9am  / 18:00 -19:00</p>
+                    <p class={Horario}>L-J / M-V</p>
+                    <p class={Horario}>10am-11am  / 18:30 -19:30</p>
                     <p class={Horario}>Duracion : 1 hora</p>
 
-                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Pedir</a></button>
+                    <button class="bg-primary px-8 mt-3 lg:mt-0   lg:py-2 lg:px-16 text-lg font-black rounded-lg"><a href="">Iniciar ahora</a></button>
                  </div>
         </div>
         
