--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import InfoMain from '../sections/SectionsIndex/info.astro'
 import Navbar from '../sections/NavSections/Navbar.astro'
 import SliderGym from '../sections/OurGymSections/sliderGym.astro'
+import ObjetosGym from '../sections/OurGymSections/gymObjetos.astro'
+
 
 
 
@@ -10,9 +12,9 @@ import SliderGym from '../sections/OurGymSections/sliderGym.astro'
 
 <Layout title="otro">
 	<Navbar />
-	<InfoMain />
-	<main  >
+	<main class="lg:max-w-6xl lg:mx-auto" >
 		<SliderGym />
+		<ObjetosGym/>
 	</main>
  
 </Layout>
