--- a/src/sections/OurGymSections/gymObjetos.astro
+++ b/src/sections/OurGymSections/gymObjetos.astro
@@ -1,8 +1,8 @@
-<section class="h-auto flex flex-col justify-center items-center">
+<section class="h-auto flex flex-col justify-center items-center mx-5  mb-5  lg:mx-0">
 <h1 class="text-primary text-4xl lg:text-5xl font-black my-6  ">EQUIPOS GYM</h1>
 <article class="grid grid-cols-2  lg:grid-cols-3 gap-4">
 
-    <div class="grid grid-cols-2 shadow-white shadow hover:shadow-primary transition rounded-md">
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
         <div class="lg:h-44 ">
             <img  class="h-full object-cover w-full" src="https://img.freepik.com/fotos-premium/equipo-gimnasio-pesas-mancuernas-deporte_97875-143.jpg" alt="">
         </div>
@@ -11,17 +11,77 @@
 
         </div>
     </div>
-    <div class="grid  grid-cols-1 lg:grid-cols-2">
-        <div>
-            <img src="https://img.freepik.com/fotos-premium/equipo-gimnasio-pesas-mancuernas-deporte_97875-143.jpg" alt="">
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://i.blogs.es/5ca9bd/cardio/650_1200.jpg" alt="">
         </div>
-        <p>Mancuerdas</p>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Máquinas de cardio</p>
+
+        </div>
     </div>
-    <div class="grid grid-cols-2">
-        <div>
-            <img src="https://img.freepik.com/fotos-premium/equipo-gimnasio-pesas-mancuernas-deporte_97875-143.jpg" alt="">
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://www.runners.mx/wp-content/uploads/2021/11/aparatos-gimnasio.jpeg" alt="">
         </div>
-        <p>Mancuerdas</p>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Máquinas de musculación</p>
+
+        </div>
+    </div>
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://i.pinimg.com/474x/8e/69/c5/8e69c54ad87195dac7b73f1bbce9b2aa.jpg" alt="">
+        </div>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Equipos de Boxeo</p>
+
+        </div>
+    </div>
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://previews.123rf.com/images/aylinyuk/aylinyuk2305/aylinyuk230500289/203738232-interior-de-un-gimnasio-con-paredes-rosas-suelo-naranja-y-mucho-equipo-de-yoga-representaci%C3%B3n-3d.jpg" alt="">
+        </div>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Equipos de Yoga</p>
+
+        </div>
+    </div>
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://i0.wp.com/blog.smartfit.com.mx/wp-content/uploads/2023/02/que-es-la-pelota-bosu-y-para-que-sirve.jpg?fit=1200%2C675&ssl=1" alt="">
+        </div>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Equipo de Equilibrio</p>
+
+        </div>
+    </div>
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://i0.wp.com/blog.smartfit.com.mx/wp-content/uploads/2022/11/elevacion-de-tronco-en-banco-inlcinado.jpg?fit=1200%2C675&ssl=1" alt="">
+        </div>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Equipos para Abdomen</p>
+
+        </div>
+    </div>
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://www.sinburpeesenmiwod.com/wp-content/uploads/2017/11/combinar-halterofilia-crossfit.jpg" alt="">
+        </div>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Pesas </p>
+
+        </div>
+    </div>
+    <div class="grid   grid-cols-1 pb-3 lg:pb-0 lg:grid-cols-2 shadow-black shadow hover:shadow-primary transition rounded-md">
+        <div class="lg:h-44 ">
+            <img  class="h-full object-cover w-full" src="https://media.gq.com.mx/photos/5f80a3ff3515c53dd2a864c3/16:9/w_2992,h_1683,c_limit/GettyImages-1190032099-barra%20z.jpg" alt="">
+        </div>
+        <div class=" text-center flex justify-center items-center flex-col">
+            <p class="text-white text-xl font-bold " >Barras EZ</p>
+
+        </div>
     </div>
 </article>
 </section>
