--- a/src/sections/SectionsIndex/infoBenefits.astro
+++ b/src/sections/SectionsIndex/infoBenefits.astro
@@ -7,13 +7,13 @@ const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
   <p class="text-white text-lg  md:text-xl mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
 
   <article class="grid grid-cols-1 md:grid-cols-3 gap-4  mx-9 md:mx-16 h-full">
-    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/zfn1CY2p/second-IMG4.png');">
+    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG4.png');">
      <a href="/About"> <h1 class={H1_style}>Nuestro gimnasio</h1></a>
     </div>
-    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/g2h9pPpd/second-IMG6.png');">
+    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG6.png');">
      <a href="/class"><h1  class={H1_style} >Explora nuestras clases en grupo</h1></a> 
     </div>
-    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/yNCMYr6R/second-IMG7.png');">
+    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG7.png');">
      <a href=""><h1  class={H1_style}>entrenamientos personales</h1></a> 
     </div>
 
