--- a/src/sections/SectionsIndex/PrincipalMain.astro
+++ b/src/sections/SectionsIndex/PrincipalMain.astro
@@ -4,10 +4,10 @@
 </nav>
  
 <section class="h-screen relative  flex justify-center items-center text-center  ">
-    <div class="absolute z-40">
+    <article class="absolute z-40">
         <h1 class="font-black text-8xl text-white italic animate-zoom-in  " >SÉ EL MEJOR</h1>
         <button class="bg-primary mt-9   py-3 px-12 tracking-wider text-xl hover:scale-105 transition hover:shadow-lg hover:opacity-90"><a href="#">ÚNETE HOY</a></button>
-    </div>
-    <img   class="object-cover h-screen w-screen saturate-150 " src="https://i.postimg.cc/PJvpyqg0/mainIMG.webp" alt="">
+    </article>
+    <img   class="object-cover h-screen w-screen saturate-150 " src="https://media.canva.com/1/image-resize/1/1600_1066_92_JPG_F/czM6Ly9tZWRpYS1wcml2YXRlLmNhbnZhLmNvbS9pdVJnRS9NQUdBS2lpdVJnRS8xL3AuanBn?osig=AAAAAAAAAAAAAAAAAAAAANoPNz6XI8UmvZb8vaMySWUJU73YCtSG69q_dfNMPUbz&exp=1711060915&x-canva-quality=screen_2x&csig=AAAAAAAAAAAAAAAAAAAAANu5CZBnXzauqqQHdNcZhkLsMQe0_sUnGCV6K6KW1KW8" alt="">
 </section>
 
