--- a/src/sections/SectionsIndex/price.astro
+++ b/src/sections/SectionsIndex/price.astro
@@ -7,10 +7,10 @@ const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
 
 
 <section class=" flex flex-col justify-center items-center my-6">
-  <h1 class="text-primary  italic text-4xl lg:text-6xl  font-black my-7  lg:my-9">Planes</h1>
-  <div  class="grid  grid-cols-1 gap-7  lg:gap-9 lg:grid-cols-3 h-auto lg:mx-16  ">
+  <h2 class="text-primary  italic text-4xl lg:text-6xl  font-black my-7  lg:my-9">Planes</h2>
+  <aside  class="grid  grid-cols-1 gap-7  lg:gap-9 lg:grid-cols-3 h-auto lg:mx-16  ">
     <article class={Article}>
-      <h2 class={H2}>Plan Básico - S/50 al mes:</h2>
+      <h3 class={H2}>Plan Básico - S/50 al mes:</h3>
       <ul class={Ul}>
         <li>
           - Acceso completo al gimnasio durante las horas de operación estándar.
@@ -19,7 +19,7 @@ const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
         <li> - Asesoramiento nutricional básico.</li>
         <li>- Descuento del 10% en sesiones de entrenamiento personal.</li>
       </ul>
-      <button class={Buttoms}><a href="#">LO QUIERO</a></button>
+      <button class={Buttoms} aria-label="Quiero el Plan Basico"><a href="#">LO QUIERO</a></button>
     </article>
     <article class={Article}>
       <h2  class={H2}>Plan Premium - S/100 al mes:</h2>
@@ -35,7 +35,7 @@ const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
         <li>- Sesión gratuita de entrenamiento personal cada mes.</li>
         <li>- Acceso exclusivo a eventos y talleres especiales.</li>
       </ul>
-      <button class={Buttoms}><a href="#">LO QUIERO</a></button>
+      <button class={Buttoms} aria-label="Quiero el Plan Premium"><a href="#">LO QUIERO</a></button>
 
     </article>
     <article class={Article}>
@@ -52,8 +52,8 @@ const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
         </li>
         <li>- Descuento del 15% en productos de la tienda del gimnasio.</li>
       </ul>
-      <button class={Buttoms}><a href="#">LO QUIERO</a></button>
+      <button class={Buttoms} aria-label="Quiero el Plan Vip"><a href="#">LO QUIERO</a></button>
 
     </article>
-  </div>
+  </aside>
 </section>
