--- a/src/sections/SectionsIndex/afterBeforeInfo.astro
+++ b/src/sections/SectionsIndex/afterBeforeInfo.astro
@@ -1,25 +1,30 @@
-<section class="flex  text-center flex-col h-auto md:h-screen mt-10 md:mt-6">
-    <h1 class="text-primary italic font-black  mb-9 md:text-5xl  text-4xl md:mt-4 md:mb-16 uppercase">Antes y despúes</h1>
+---
+const ArtStyle="bg-white bg-cover h-80  md:h-96 flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100";
+const InfoPerson="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4"
+---
+
+<aside class="flex  text-center flex-col h-auto md:h-screen mt-10 md:mt-6">
+    <h2 class="text-primary italic font-black  mb-9 md:text-5xl  text-4xl md:mt-4 md:mb-16 uppercase">Antes y despúes</h2>
    
-    <article class="grid  grid-cols-1 md:grid-cols-3 gap-4 md:gap-7 md:mx-32 mx-11    md:h-96  ">
-        <div class="bg-white bg-cover h-80  md:h-96 flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personOne.png');">
-           <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4   ">
+    <section class="grid  grid-cols-1 md:grid-cols-3 gap-4 md:gap-7 md:mx-32 mx-11    md:h-96  ">
+        <article class={ArtStyle} style="background-image: url('../src/img/personOne.png');">
+           <div class={InfoPerson}>
                 <p class="text-sm mb-5">"¡Increíble gimnasio! Los entrenadores son geniales y los resultados son reales. ¡Me siento más fuerte y más saludable que nunca!"</p>
                 <b class="italic">Dolores Blanca, 31</b>   
             </div>
-        </div>
-        <div class="bg-white bg-cover flex  flex-col justify-end h-80  md:h-96  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personTwo.png');">
-            <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4  ">
+        </article>
+        <article class={ArtStyle} style="background-image: url('../src/img/personTwo.png');">
+            <div class={InfoPerson}>
                  <p class="text-sm mb-5">"Me uní a este gimnasio hace un mes y ya estoy viendo cambios increíbles en mi cuerpo. ¡Altamente recomendado!"</p>
                  <b class="italic">Lauren Cross, 28</b>   
              </div>
-         </div>
-         <div class="bg-white bg-cover  hidden md:flex  flex-col justify-end h-80  md:h-96 hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personThirt.png');">
-            <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4  ">
+         </article>
+         <article class="bg-white bg-cover  hidden md:flex  flex-col justify-end h-80  md:h-96 hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personThirt.png');">
+            <div class={InfoPerson}>
                  <p class="text-sm mb-5">"No puedo decir lo suficiente sobre este gimnasio. Los entrenamientos son intensos pero efectivos, y el personal es amable y servicial. ¡Me encanta!"</p>
                  <b class="italic">Tomás Cano, 44</b>   
              </div>
-         </div>
-    </article>
-    
+         </article>
     </section>
+    
+    </aside>
