--- a/src/sections/SectionsIndex/infoBenefits.astro
+++ b/src/sections/SectionsIndex/infoBenefits.astro
@@ -1,24 +1,29 @@
 ---
 const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
+const ArticuloStyle="bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100"
 ---
 
 <section data-aos="zoom-in" class="flex text-center flex-col h-screen">
-  <h1 class="text-primary italic font-black md:text-5xl  text-4xl mt-5">QUE OFRECEMOS</h1>
-  <p class="text-white text-lg  md:text-xl mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
+  <h2 class="text-primary italic font-black md:text-5xl text-4xl mt-5">QUE OFRECEMOS</h2>
+  <p class="text-white text-lg md:text-xl mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte la mejor experiencia de entrenamiento.</p>
 
-  <article class="grid grid-cols-1 md:grid-cols-3 gap-4  mx-9 md:mx-16 h-full">
-    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG4.png');">
-     <a href="/About"> <h1 class={H1_style}>Nuestro gimnasio</h1></a>
-    </div>
-    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG6.png');">
-     <a href="/class"><h1  class={H1_style} >Explora nuestras clases en grupo</h1></a> 
-    </div>
-    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG7.png');">
-     <a href=""><h1  class={H1_style}>entrenamientos personales</h1></a> 
-    </div>
-
-    
-  </article>
-
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mx-9 md:mx-16 h-full">
+    <article class={ArticuloStyle} style="background-image: url('../src/img/secondIMG4.png');">
+      <a href="/About" aria-label="Ingresa a conocer nuestro gimnasio">
+        <h1 class={H1_style}>Nuestro gimnasio</h1>
+      </a>
+    </article>
+    <article class={ArticuloStyle} style="background-image: url('../src/img/secondIMG6.png');">
+      <a href="/class" aria-label="Explora nuestras clases en grupo">
+        <h1 class={H1_style}>Explora nuestras clases en grupo</h1>
+      </a>
+    </article>
+    <article class={ArticuloStyle} style="background-image: url('../src/img/secondIMG7.png');">
+      <a href="#" aria-label="Conoce nuestros entrenamientos personales">
+        <h1 class={H1_style}>Entrenamientos personales</h1>
+      </a>
+    </article>
+  </div>
 </section>
+
 
