--- a/src/sections/SectionsIndex/infoBenefits.astro
+++ b/src/sections/SectionsIndex/infoBenefits.astro
@@ -8,17 +8,17 @@ const ArticuloStyle="bg-cover flex justify-center items-center hover:scale-105 t
   <p class="text-white text-lg md:text-xl mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte la mejor experiencia de entrenamiento.</p>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mx-9 md:mx-16 h-full">
-    <article class={ArticuloStyle} style="background-image: url('../src/img/secondIMG4.png');">
+    <article class={ArticuloStyle} style="background-image: url('../public/img/secondIMG4.png');">
       <a href="/About" aria-label="Ingresa a conocer nuestro gimnasio">
         <h1 class={H1_style}>Nuestro gimnasio</h1>
       </a>
     </article>
-    <article class={ArticuloStyle} style="background-image: url('../src/img/secondIMG6.png');">
+    <article class={ArticuloStyle} style="background-image: url('../public/img/secondIMG6.png');">
       <a href="/class" aria-label="Explora nuestras clases en grupo">
         <h1 class={H1_style}>Explora nuestras clases en grupo</h1>
       </a>
     </article>
-    <article class={ArticuloStyle} style="background-image: url('../src/img/secondIMG7.png');">
+    <article class={ArticuloStyle} style="background-image: url('../public/img/secondIMG7.png');">
       <a href="#" aria-label="Conoce nuestros entrenamientos personales">
         <h1 class={H1_style}>Entrenamientos personales</h1>
       </a>
