--- a/src/sections/SectionsIndex/footer.astro
+++ b/src/sections/SectionsIndex/footer.astro
@@ -1,4 +1,4 @@
-<footer class="h-2/6 bg-cover bg-no-repeat mt-7 md:mt-0 flex flex-col md:justify-end  justify-center" style="background-image: url('../src/img/footer.png');">
+<footer class="h-2/6 bg-cover bg-no-repeat mt-7 md:mt-0 flex flex-col md:justify-end  justify-center" style="background-image: url('../public/img/footer.png');">
 <div class="mb-24 mt-24  mx-auto max-w-80  md:max-w-96 md:mb-52 md:ml-14 md:mt-32 ">
     <h1 class="font-black text-primary md:text-start text-center  text-5xl md:text-6xl uppercase italic tracking-wide">¡Ponte en contacto hoy!</h1>
 </div>
